--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{-webkit-appearance:none;-moz-appearance:none}input[type=search]{-webkit-appearance:none;-moz-appearance:none;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}textarea{overflow:auto;vertical-align:top;resize:vertical}audio,canvas,video{display:inline-block;max-width:100%}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus{outline:thin dotted}a:active,a:hover{outline:0}img{border:0;-ms-interpolation-mode:bicubic}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}button,html,input,select,textarea{color:#222}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}img{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}
 
+.visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 /*  */
 
 
@@ -38,7 +39,7 @@ img {
 /* CHECK OUT STUFF FROM WEEEK 3 LOTS OF GOOD STYLING TIPS */
 
 
-small-titles {
+.badge h2, .featured-text h2, .highlight-text h2 {
     font-family: 'Cormorant Garamond';
     font-size: 3.5rem;
     font-weight: 500;
@@ -154,10 +155,6 @@ nav {
     padding: 50px 0;
 }
 
-.news-gallery {
-
-}
-
 .news-gallery li {
     float: left;
     margin-right: 20px;
@@ -184,9 +181,13 @@ margin-right: 20px;
  width: calc(75% - 20px);
 }
 
+.highlight-text .buttons{
+    margin-bottom: 0;
+}
+
 .buttons {
     padding: 15px 25px;
-    background-color: rgb(24, 51, 153);
+    background-color: rgba(24, 51, 153, 0.78);
     float: left;
     width: 160px;
     text-align: center;
@@ -227,38 +228,91 @@ margin-right: 20px;
 
 /* footer styles */
 
+/* banner area */
 .banner {
     background-image: url("../assets/one-magazine-footer.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 300px;
+}
+
+.badge-container {
 }
 
 .badge {
-color: white;
-font-size: 4.9rem;
+color: #FCFCFC;
 float: left;
 width: calc(100%/3);
 text-align: center;
+margin: 8% 0;
 }
 
-.badge i,h2 {
+.badge  i {
+    font-size: 5.5rem;
+}
+
+
+.badge i, .badge h2 {
     padding: 10px;
 }
 
+/* footer info container */
+
 .info-container {
     background-color: #E3E3E3;
+    padding: 70px 0;
 }
+
+/* footer subscribe area */
 
 .newsletter-container {
     float: left;
     width: 40%;
     margin-left: 10%;
+    margin-right: 10px;
 }
+
+form {
+    height: 40px; 
+    margin: 10px 0;   
+}
+
+h3 {
+    font-family: 'Cormorant Garamond';
+    font-weight: 600;
+}
+
+input {
+    text-decoration: none;
+    border: none;
+    padding: 0 20px;
+    height: 100%;
+    width: 70%;
+}
+
+.subscribe {
+    background-color: black;
+    color: white;
+    padding: 10px 25px;
+    border: none;
+    height: 100%;
+    font-family: 'Cormorant Garamond';
+    font-weight: 500;
+}
+
+/* footer contact area */
 
 .contact-info-container, .contact-links-container ul{
     float: left;
-    width: 20%;
+}
+
+.contact-info-container {
+    width: 30%;
+    margin-left: 10px;
+}
+
+.contact-links-container ul{
+    width: 10%;
 }
 
 .contact-links-container ul {
@@ -267,10 +321,18 @@ text-align: center;
 
 .footer-links a {
     padding: 5px;
+    font-weight: bold;
 }
+
+.footer-links a:visited {
+    color: black;
+}
+
+/* footer copy right area */
 
 .copyright-container {
     background-color: #ACACAC;
     text-align: center;
+    font-weight: bold;
 }
 
