--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,17 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{-webkit-appearance:none;-moz-appearance:none}input[type=search]{-webkit-appearance:none;-moz-appearance:none;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}textarea{overflow:auto;vertical-align:top;resize:vertical}audio,canvas,video{display:inline-block;max-width:100%}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus{outline:thin dotted}a:active,a:hover{outline:0}img{border:0;-ms-interpolation-mode:bicubic}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}button,html,input,select,textarea{color:#222}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}img{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}
 
 .visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
-/*  */
-
 
 /* general styles */
 
 html {
     font-size: 62.5%;
+}
+
+/* this makes font not over bolded credit to Thiago Nemecek */
+body {
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
 }
 
 ul {
@@ -79,6 +83,10 @@ nav {
     padding-top: 20px;
     position: relative;
 }
+
+.hamburger-menu {
+        display: none;
+    }
 
 .h1-container {
     position: relative;
@@ -336,3 +344,95 @@ input {
     font-weight: bold;
 }
 
+/* Mobile screen size specifically Iphone 6/7/8 */
+@media (max-width: 400px) {
+
+    /* header styles */
+
+    .hamburger-menu {
+        display: inline-block;
+        float: right;
+        font-size: 4rem;
+    }
+
+    .nav-link-ul, .social-bar, .logo {
+        display: none;
+    }
+
+    .header-title {
+        top: 40%;
+        left: 50%;
+        margin-left: -154.5px;
+        font-size: 6rem;
+    }
+
+    /* news articles styles*/
+
+    .heading-text {
+        font-size: 3.2rem;
+    }
+
+     .news-gallery li {
+        margin: 0;
+        width: calc((100% - 15px)/2);
+    }
+
+    .news-gallery li:first-child {
+        margin-right: 15px;
+    }
+
+    .news-gallery li:last-child {
+        display: none;
+    }
+
+    /* highlight area */
+
+    .highlight-image {
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 50px;
+    }
+
+    .highlight-text {
+        width: 100%;
+    }
+
+    .highlight-text .buttons {
+        margin-top: 40px;
+    }
+
+.buttons {
+    margin-left: 24%;
+}
+
+
+    .highlight-text h2 {
+        text-align: center;
+    }
+
+    /* featured area */
+
+    .featured-text, .featured-image {
+        width: 100%;
+    }
+
+    .featured-text {
+        text-align: center;
+    }
+
+    .left-text, .right-text {
+        margin-left: 0;
+        margin-right: 0;
+        padding: 0 20px;
+    }
+
+    .featured-text h2 {
+        font-size: 2.1rem;
+    }
+
+    .body-text {
+        font-size: 1.9rem;
+    }
+    
+
+}
